Bug 1191301 - Re-enable the use of media.navigator.video.use_tmmbr pref. r=bwc